# susurro

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
api/: Dockerfile  SETUP.md  pyproject.toml  railway.json
api/app/: __init__.py  auth.py  billing.py  db.py  emails.py  main.py  models.py  settings.py  transcribe.py  usage.py  web.py
api/app/templates/: base.html  dashboard.html  desktop_token.html  home.html  magic_expired.html  magic_sent.html  signin.html  waitlist_done.html
docs/: index.html
scripts/: generate_icons.py  run.sh  test_mic.py
susurro/: __init__.py  __main__.py  app.py  audio.py  config.py  hotkey.py  indicator.py  logging_config.py  permissions.py  stt.py  typer.py
susurro/backends/: __init__.py  audio_io.py  base.py  credentials.py  groq.py  local_mlx.py  local_mlx_lm.py  susurro_pro.py
susurro/polish/: __init__.py  prompt.py  rules.py  triggers.py
tests/: test_polish.py  test_smoke.py
