[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "susurro"
version = "0.2.0"
description = "Voice dictation for macOS with WisprFlow-grade smart formatting. Hot-swap between local (MLX) and cloud (Groq, OpenAI, Anthropic, Gemini, Deepgram) backends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Danny Bravo" }]
keywords = [
    "whisper",
    "dictation",
    "speech-to-text",
    "stt",
    "mlx",
    "apple-silicon",
    "macos",
    "menu-bar",
    "groq",
    "llm",
    "wisprflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "mlx>=0.21",
    "mlx-whisper>=0.4",
    "mlx-lm>=0.21",                # local polish LLM (Llama 3.2 3B etc.)
    "sounddevice>=0.4",
    "pynput>=1.7",
    "rumps>=0.4",
    "numpy>=1.26",
    "openai>=1.40",                # Groq + OpenAI (both OpenAI-compatible)
    "httpx>=0.27",                 # talking to Susurro Pro API
]

[project.optional-dependencies]
# Future cloud backends — install only what you use.
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=0.3"]
deepgram = ["deepgram-sdk>=3.0"]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pillow>=10.0",
]

[project.scripts]
susurro = "susurro.app:main"

[project.urls]
Homepage = "https://github.com/danilobrando/susurro"
Repository = "https://github.com/danilobrando/susurro"
Issues = "https://github.com/danilobrando/susurro/issues"
Changelog = "https://github.com/danilobrando/susurro/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["susurro"]

[tool.hatch.build.targets.wheel.force-include]
"susurro/icons/idle.png" = "susurro/icons/idle.png"
"susurro/icons/recording.png" = "susurro/icons/recording.png"
"susurro/icons/processing.png" = "susurro/icons/processing.png"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",  # let formatter handle line length
    "B008",  # function calls in default arguments (rumps uses this pattern)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
