[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "susurro"
version = "0.4.0"
description = "Local voice dictation for macOS. Whisper + Llama 3.2 3B run on-device via Apple's MLX framework. No accounts, no API keys, no network."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Danny Bravo" }]
keywords = [
    "whisper",
    "dictation",
    "speech-to-text",
    "stt",
    "mlx",
    "apple-silicon",
    "macos",
    "menu-bar",
    "local-first",
    "privacy",
    "offline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "mlx>=0.21",
    "mlx-whisper>=0.4",
    "mlx-lm>=0.21",
    "sounddevice>=0.4",
    "pynput>=1.7",
    "rumps>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pillow>=10.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
susurro = "susurro.app:main"

[project.urls]
Homepage = "https://github.com/danilobrando/susurro"
Repository = "https://github.com/danilobrando/susurro"
Issues = "https://github.com/danilobrando/susurro/issues"
Changelog = "https://github.com/danilobrando/susurro/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["susurro"]

[tool.hatch.build.targets.wheel.force-include]
"susurro/icons/idle.png" = "susurro/icons/idle.png"
"susurro/icons/recording.png" = "susurro/icons/recording.png"
"susurro/icons/processing.png" = "susurro/icons/processing.png"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",  # let formatter handle line length
    "B008",  # function calls in default arguments (rumps uses this pattern)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
