[project]
name = "susurro-api"
version = "0.1.0"
description = "Susurro Pro backend — auth, billing, transcription proxy."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "python-multipart>=0.0.20",
    "jinja2>=3.1",
    "resend>=2.1",
    "stripe>=11.0",
    "openai>=1.40",
    "pydantic-settings>=2.6",
    "itsdangerous>=2.2",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]
